Revision history for multidimensional

{{$NEXT}}

0.003     2010-11-18 12:53:38 Europe/London
 - Call ExtUtils::Depends from the built Makefile.PL,
   not when building it

0.002 2010-11-16
 - Don't disallow explicit join($;, ...) in hash subscript

0.001 2010-11-16
 - initial release