@@ -4,6 +4,7 @@
 #include "hook_op_check.h"
 
 #define __PACKAGE__ "multidimensional"
+#define __PACKAGE_LEN__ strlen(__PACKAGE__)
 
 STATIC OP *last_list_start;
 
@@ -16,7 +17,7 @@ STATIC OP *multidimensional_list_check_op (pTHX_ OP *op, void *user_data) {
 }
 
 STATIC OP *multidimensional_helem_check_op (pTHX_ OP *op, void *user_data) {
-    SV **hint = hv_fetchs(GvHV(PL_hintgv), __PACKAGE__, 0);
+    SV **hint = hv_fetch(GvHV(PL_hintgv), __PACKAGE__, __PACKAGE_LEN__, 0);
 
     PERL_UNUSED_ARG(user_data);
 
